Cleanup in toknroll tests.